--- a/TIL/LogisticRegrssion/Logistic Regrssion_1.ipynb
+++ b/TIL/LogisticRegrssion/Logistic Regrssion_1.ipynb
@@ -177,6 +177,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3️⃣ Numpy implementation\n",
+    "Logistic Regrssion을 numpy로 구현\n",
+    "\n",
+    "#### [ sigmoid function ]\n",
+    "#### $h_\\theta (x) = g(z) = \\frac{1}{1+e^{-z}}$\n",
+    "\n",
+    "```\n",
+    "def sigmoid(z):\n",
+    "    return  1 / (1 + np.exp(z)) \n",
+    "```\n",
+    "\n",
+    "#### [ Hypothesis function ]\n",
+    "#### $h_\\theta (x) = \\frac{1}{1+ e^{-\\theta T x}}$\n",
+    "\n",
+    "```\n",
+    "def hypothesis_function(x, theta):\n",
+    "    z = (np.dot(-x, theta))\n",
+    "    return sigmoid(z)\n",
+    "```\n",
+    "\n",
+    "#### [ Cost function ]\n",
+    "#### $J(\\theta) = - \\frac{1}{m} \\sum_{i = 1}^m [y^{(i)} log h_\\theta (x ^ {(i)}) + (1 - y^{(i)}) log (1 - h_\\theta (x^{(i)}))] $\n",
+    "\n",
+    "```\n",
+    "def compute_cost(x, y, theta):\n",
+    "    m = y.shape[0]\n",
+    "    J = (-1.0 /m) * ( y.T.dot(np.log(hypothesis_function(x, theta))) + \\ \n",
+    "        (1-y).T.dot(np.log(1 - hypothesis_function(x, theta) )))\n",
+    "\n",
+    "    return (-1.0 / m) * (y * np.log(hypothesis_function(x,theta)) + (1-y) \\\n",
+    "            * np.log( 1- hypothesis_function(x,theta) )).sum()\n",
+    "```\n",
+    "\n",
+    "#### [ Weight update ]\n",
+    "```\n",
+    "def minimize_gradient(x, y, theta, iterations = 100000, alpha = 0.01)\n",
+    "    m = y.size\n",
+    "    cost_history = []\n",
+    "    theta_history = []\n",
+    "\n",
+    "    for _ in range(iterations):\n",
+    "\n",
+    "        original_theata = theta\n",
+    "    \n",
+    "        for i in range(theta.size):\n",
+    "            partial_marginal = x[:, i].reshape(x.shape[0], 1)\n",
+    "            delta = hypothesis_function(x, original_theta) - y\n",
+    "            grad_i = delta.T.dot(parital_marginal) # 정수\n",
+    "\n",
+    "            theta[i] = theta[i] - (alpha * grad_i)\n",
+    "\n",
+    "        if ( _ % 10000) == 0:\n",
+    "            theta_history.append(theta)\n",
+    "            cost_history.append(compute_cost(x,y, theta) )\n",
+    "\n",
+    "    return theta, np.array(cost_history), np.array(theta_history)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -186,18 +259,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "730b21a53400ae1ba7176fa0274ae345f408e033addad13218c73726d872c853"
+    "hash": "054003ddc8bb90967440df83eb0c4b5179a46b3dd7ffab730dd8d113d29b604c"
    }
   }
  },
