--- a/TIL/LogisticRegrssion/Logistic Regrssion.ipynb
+++ b/TIL/LogisticRegrssion/Logistic Regrssion.ipynb
@@ -3169,6 +3169,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- support : y_true에서 해당하는 data의 개수\n",
+    "- class 0~2 : macro\n",
+    "- weighted avg : micro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -3193,13 +3202,6 @@
    "source": [
     "print(classification_report(y_true, y_pred, target_names=target_names))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
