--- a/TIL/DecisionTree/DecisionTree.ipynb
+++ b/TIL/DecisionTree/DecisionTree.ipynb
@@ -199,7 +199,7 @@
     "( j : 속성 A의 label,  Ex) j = red, blue )\n",
     "\n",
     "#### <span style = 'color : green'> 속성 A의 정보 소득 </span>\n",
-    "#### $ <span style = 'background-color :#ffdce0' >Gain(A) = Info(D) - Info_A(D) $ </span>\n",
+    "#### <span style = 'background-color :#ffdce0' > $ Gain(A) = Info(D) - Info_A(D) $ </span>\n",
     "\n",
     "$Gain(A) \\downarrow $  \n",
     "$\\Rightarrow Info_A(D) \\uparrow$   \n",
@@ -1359,7 +1359,336 @@
     "위의 4가지 속성 중 가장 큰 Gain의 Attribute는 Age인 것을 볼 수 있다.  \n",
     "= Age의 Entropy가 가장 작다 = 헷가리는 것이 작다. = 먼저 분류할 Attribute\n",
     "\n",
-    "![branch](https://ifh.cc/g/JXRamt.jpg)"
+    "먼저, Age Attribute를 기준으로 branch\n",
+    "\n",
+    "![branch](https://ifh.cc/g/JXRamt.jpg)\n",
+    "\n",
+    "다음으로는 youth를 기준으로 branch, senior 기준으로 branch  \n",
+    "\n",
+    "위와 똑같은 방식으로 youth를 기준으로 branch 해보자\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RID</th>\n",
+       "      <th>age</th>\n",
+       "      <th>income</th>\n",
+       "      <th>student</th>\n",
+       "      <th>credit_rating</th>\n",
+       "      <th>class_buys_computer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>youth</td>\n",
+       "      <td>high</td>\n",
+       "      <td>no</td>\n",
+       "      <td>fair</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>youth</td>\n",
+       "      <td>high</td>\n",
+       "      <td>no</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>youth</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>no</td>\n",
+       "      <td>fair</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>youth</td>\n",
+       "      <td>low</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>fair</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>youth</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    RID    age  income student credit_rating class_buys_computer\n",
+       "0     1  youth    high      no          fair                  no\n",
+       "1     2  youth    high      no     excellent                  no\n",
+       "7     8  youth  medium      no          fair                  no\n",
+       "8     9  youth     low     yes          fair                 yes\n",
+       "10   11  youth  medium     yes     excellent                 yes"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "youth = pd_data.loc[pd_data['age'] == 'youth']\n",
+    "youth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['high' 'medium' 'low']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5709505944546686"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_info(youth) - get_attribute_info(youth, 'income')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['no' 'yes']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9709505944546686"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_info(youth) - get_attribute_info(youth, 'student')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fair' 'excellent']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.01997309402197489"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_info(youth) - get_attribute_info(youth, 'credit_rating')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "income, student, credit_rating의 information Gain 중 가장 큰 값을 가지는 Attribute는 student이다. \n",
+    "\n",
+    "$\\Rightarrow$ Student를 기준으로 branch\n",
+    "\n",
+    "![branch1](./img/branch1.PNG)\n",
+    "\n",
+    "잘 나눠졌으므로 senior 기준으로 다시 branch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4️⃣ C4.5 & Gini Index\n",
+    "\n",
+    "### ✔ Information Gain의 문제점\n",
+    "- 어떤 Attribute에 포함된 값이 다양할 수록 선택되고자 함\n",
+    "\n",
+    "이게 무슨 말이냐면   \n",
+    "\n",
+    "예를 들어서 age라는 Attribute에 1~100까지 모두 하나씩 있다고 해보자   \n",
+    "\n",
+    "그러면 $Info_A(D)$의 식에서 $\\frac{\\vert D_j \\vert}{\\vert D \\vert}$가 작은 값을 가지게 될 것이다.  \n",
+    "\n",
+    "$\\Rightarrow Info_A(D) \\downarrow \\Rightarrow Gain(A) \\uparrow$  \n",
+    "\n",
+    "##### $Gain(A) = info(D) - Info_A(D)$\n",
+    "##### $Info_A(D) = \\sum_{j=1}^v \\frac{\\vert D_j \\vert}{\\vert D \\vert} * Info(D_j)$\n",
+    "##### $Info(D) = - \\sum_{i=1}^n p_i log_2 (p_i)$\n",
+    "\n",
+    "- 한 Attribute가 모두 다른 값을 가질 때   \n",
+    "<span style = 'color : red'>보완을 해줄 다른 Measure 필요</span>\n",
+    "\n",
+    "### ✔ Gain Ratio\n",
+    "- ID3의 발전형인 C4.5 알고리즘에서 사용되는 measure\n",
+    "- Info(D)의 값을 평준화시켜 분할 정보 값을 대신 사용\n",
+    "- 값이 다양할 수록 weight를 줘 penalty 부여\n",
+    "\n",
+    "##### $ splitInfo_A(D) = -\\sum_{j=1}^v \\frac{\\vert D_j \\vert}{\\vert D \\vert} * (log_2 \\frac{\\vert D_j \\vert}{\\vert D \\vert})$\n",
+    "##### $ GainRatio(A) = \\frac{Gain(A)}{SplitInfo_A(D)} = \\frac{Info(D) - Info_A(D)}{SplitInfo_A(D)} $\n",
+    "\n",
+    "![c4](./img/c4.PNG)\n",
+    "\n",
+    "Ex) $SplitInfo_A(D)$  \n",
+    "\n",
+    "총 데이터 14개 중에서 j = 1인 데이터의 개수가 2개인 경우  \n",
+    "\n",
+    "$\\frac{\\vert D_j \\vert}{\\vert D \\vert}$는 작을 것이고,  - $log_2 \\frac{\\vert D_j \\vert}{\\vert D \\vert}$는 클 것이다.  \n",
+    "\n",
+    "(위의 그래프를 보면 $p_i$가 작아질수록 $-log_2(p_i)$가 커지는 것을 볼 수 있다.)\n",
+    "\n",
+    "$\\Rightarrow$ 이런 경우 $splitInfo_A(D)$의 값이 커지게 되며 $GainRatio(A)$의 값은 작아질 것이다.\n",
+    "\n",
+    "\n",
+    "<span style = 'background-color : #f5f0ff'>$SplitInfo_A(D) \\uparrow \\ \\Rightarrow GainRatio(A) \\downarrow  \\ \\Rightarrow SplitInfo_A(D) : Penalty$ </span>\n",
+    "\n",
+    "### ✔ Gini Index\n",
+    "- CART 알고리즘의 split measure\n",
+    "- 훈련 튜플 세트를 파티션을 나누었을때 불순한 정도를 측정\n",
+    "##### $Gini(D) = 1 - \\sum_{i=1}^m p_i^2 = 1 - \\sum_{i=1}^m \\frac{\\vert C_{i,D} \\vert}{\\vert D \\vert}$\n",
+    "where $C_i$ is a class\n",
+    "\n",
+    "- class 별로 데이터 개수 구해서 하는 방식\n",
+    "\n",
+    "- 데이터의 대상 속성을 얼마나 잘못 분류할지를 계산\n",
+    "\n",
+    "- 실제 Gini Index는 Entropy와 비슷한 그래프가 그려짐\n",
+    "\n",
+    "- 0.5일 때 Impurity의 최대화, 약 극점에서 0\n",
+    "\n",
+    "##### $ Gini(D) = \\sum_{i=1}^m p_i (1-p_i) = 1 - \\sum_{i=1}^m p_i^2  $\n",
+    "\n",
+    "![Gini](./img/Gini.PNG)\n",
+    "\n",
+    "### ✔ <span style = 'background-color : #ffdce0'> Binary Split </span>\n",
+    ": 컴퓨터가 searching을 잘 할 수 있는 방법 중 하나\n",
+    "\n",
+    "- CART 알고리즘은 Binary Split을 전제로 분석\n",
+    "\n",
+    "\n",
+    "    이게 무슨 말이냐\n",
+    "\n",
+    "    Ex) category data가 youth, middle, senior로 구분될 때  \n",
+    "\n",
+    "    youth와 나머지 /  middle과 나머지 / senior와 나머지로 각각 3개의 binary split을 해서 구하는 방식\n",
+    "  \n",
+    "    그렇다면 아래의 식에서 A는 youth, middle, senior를 뜻하며 총 3개의 Gini의 값이 나올것이다.   \n",
+    "    \n",
+    "\n",
+    "- k가 속성 내 데이터 분류의 개수일 때 $2^{k-1} - 1$개 만큼의 Split 생성\n",
+    "\n",
+    "    $ \\Rightarrow $ C4.5에 비해 많은 split이 생김\n",
+    "\n",
+    "##### $ Gini_A(D) = \\frac{\\vert D_1 \\vert}{\\vert D \\vert }Gini(D_1) +  \\frac{\\vert D_2 \\vert}{\\vert D \\vert }Gini(D_2) $\n",
+    "\n",
+    "-  <span style = 'color : purple'> Gini 값이 가장 작은 분류를 선택</span>\n",
+    "\n",
+    "### Growing a CART Decision Tree\n",
+    "\n",
+    "#### **[ Age ]**\n",
+    "$ Gini_{age}(D)$ $age \\in $ {youth, middle_age, senior}  \n",
+    "\n",
+    "![gini_age](./img/Gini_Age.PNG)\n",
+    "\n",
+    "##### 세 가지 경우의 모든 Gini Index 산출\n",
+    "\n",
+    "$age_1 \\in $ {youth} = {middle_age, senior}  \n",
+    "$age_2 \\in $ {middle_age} = {youth, senior}  \n",
+    "$age_3 \\in $ {senior} = {youth, middle_age}  \n",
+    "\n",
+    "##### $ Gini_A(D) = \\frac{\\vert D_1 \\vert}{\\vert D \\vert }Gini(D_1) +  \\frac{\\vert D_2 \\vert}{\\vert D \\vert }Gini(D_2) $\n",
+    "\n",
+    "##### Ex) youth와 나머지를 Binary Split 했을 경우 \n",
+    "$\\Rightarrow \\ age_1$ : youth = 5명, 나머지 : 9명 \n",
+    "\n",
+    "##### $ Gini_{age_1} = \\frac{5}{14}Gini(D_1) +  \\frac{9}{14}Gini(D_2) $  \n",
+    "\n",
+    "$ Gini(D_1)$ : youth 중 yes = 2명 , no = 3명\n",
+    "\n",
+    "##### $ Gini(D_1) = 1 - (\\frac{3}{5})^2 - (\\frac{2}{5})^2 $  \n",
+    "\n",
+    "$ Gini(D_2) $ : 나머지 중 yes : 7명, no : 2명\n",
+    "\n",
+    "##### $ Gini(D_2) = 1 - (\\frac{7}{9})^2 - (\\frac{2}{9})^2 $\n",
+    "\n",
+    "#### **[ Credit ]**\n",
+    "$ Gini_{credit}(D) $\n",
+    "\n",
+    "#### **[ Income ]**\n",
+    "$ Gini_{income}(D) $\n",
+    "\n",
+    "#### **[ Student ]**\n",
+    "$ Gini_{student}(D) $"
    ]
   },
   {
