--- a/TIL/DecisionTree/DecisionTree.ipynb
+++ b/TIL/DecisionTree/DecisionTree.ipynb
@@ -6087,11 +6087,11 @@
     "\n",
     "1) Split measure의 변화\n",
     "\n",
-    "    : entropy Or Gini $\\rightarrow$ variance (분산)\n",
+    "    : entropy Or Gini -> variance (분산)\n",
     "\n",
     "2) 결과 노드의 선택\n",
     "\n",
-    "    : class $\\rightarrow$ 해당 instances의 Y평균\n",
+    "    : class -> 해당 instances의 Y평균\n",
     "\n",
     "3) 나머진 다 같음\n",
     "\n",
